# tome_raider

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cli/: main.py
configs/: default.yaml  dev.yaml  prod.yaml
dataset_builder/core/: config.py  logging_config.py  pipeline.py
dataset_builder/generation/: generator.py
dataset_builder/generation/strategies/: base_strategy.py  distillation.py  response_gen.py  self_instruct.py
dataset_builder/quality/: deduplicator.py  quality_scorer.py  validator.py
dataset_builder/sources/: base.py  dataset_loader.py  file_loader.py
dataset_builder/sources/scrapers/: base_scraper.py  stackoverflow.py
dataset_builder/storage/: indexer.py
datasets/: example_001.jsonl
datasets/.index/: datasets.json
examples/: math_dataset_pipeline.yaml  self_instruct_complete.yaml
tome_raider/core/: config.py  logging_config.py
tome_raider/generation/: llm_manager.py  temporal_fact_generator.py  time_series_generator.py
tome_raider/generation/strategies/: chain_of_thought.py  evol_instruct.py  instruction_gen.py
tome_raider/quality/: repairer.py  temporal_fact_validator.py
tome_raider/review/: interactive.py
tome_raider/sources/scrapers/: base_scraper.py  github.py
tome_raider/storage/: dataset_store.py
